// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlledSearchableDropdown component > should display default value 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r6:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-7 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value="4"
    />
    <span
      class="mocked-styled-10 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
        />
      </svg>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-11 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value="Forth"
    />
    <button
      aria-disabled="false"
      class="el-button"
      data-has-no-padding="true"
      data-is-icon-only="true"
      data-size="medium"
      data-variant="tertiary"
    >
      <span
        aria-hidden="true"
        class="mocked-styled-21 el-button-icon-container"
      >
        <svg
          class="el-icon"
          color="inherit"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12.36 13.83 5.66 5.66a1 1 0 1 0 1.41-1.41l-5.66-5.66 5.66-5.66a1 1 0 1 0-1.41-1.41l-5.66 5.66L6.7 5.35a1 1 0 0 0-1.41 0 1 1 0 0 0 0 1.41l5.66 5.66-5.66 5.66a1 1 0 0 0 0 1.41 1 1 0 0 0 1.41 0l5.66-5.66Z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlledSearchableDropdown component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r4:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-7 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value=""
    />
    <span
      class="mocked-styled-10 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
        />
      </svg>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-11 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchableDropdown component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-controls=":r0:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="mocked-styled-7 el-searchable-dropdown-container"
    role="combobox"
  >
    <input
      id="some-id"
      readonly=""
      style="display: none;"
      value=""
    />
    <span
      class="mocked-styled-10 el-searchable-dropdown-search-input-add-on el-input-add-on"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
        />
      </svg>
    </span>
    <input
      aria-label="Input type undefined"
      class="mocked-styled-11 el-searchable-dropdown-search-input el-input"
      data-testid="search-input"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchableDropdownSearchLabel component > should match a snapshot 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-12 el-searchable-dropdown-search-label el-deprecated-label"
  >
    I am a label
  </label>
</DocumentFragment>
`;
